--- a/Codigos/cart.html
+++ b/Codigos/cart.html
@@ -1,7 +1,7 @@
 <DOCTYPE html> 
 <html lang="pt-br">
 <head>
-    <title> Poesia Brasileia </title
+    <title> Poesia Brasileira </title
 
      
 </head> 
@@ -15,17 +15,17 @@
     <p>Que mesmo em face do maior encanto </p>
     <p>Dele se encante mais meu pensamento </p>
     </br>
-    <p>Quero vivê-lo em cada vão momento </p>
+    <p>Quero vivÃª-lo em cada vÃ£o momento </p>
     <p>E em seu louvor hei de espalhar meu canto </p>
     <p>E rir meu riso e derramar meu pranto </p>
     <p>Ao seu pesar ou seu contentamento </p>
     <br>
     <p>E assim quando mais tarde me procure </p>
-    <p>Quem sabe a morte, angústia de quem vive <p/>
-    <p>Quem sabe a solidão, fim de quem ama</p>
+    <p>Quem sabe a morte, angÃºstia de quem vive <p/>
+    <p>Quem sabe a solidÃ£o, fim de quem ama</p>
     </br>
     <p>Eu possa lhe dizer do amor (que tive)</p>
-    <p>Que não seja imortal, posto que é chama  </p>
+    <p>Que nÃ£o seja imortal, posto que Ã© chama  </p>
     <p>Mas que seja infinito enquanto dure</p>
      <br>
     <h5> <p> Vinicious de Morais </p> </h5>
